--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
      <image>
        <div class="sakuhin1">
        <div class="image1">
-       <img src="https://github.com/okada1226/Mandara/blob/main/mandara.png?raw=true">
+       <img src="https://github.com/okada1226/unseal/blob/main/unseal1.png?raw=true">
+       </div>
+       <div class="image2">
+       <img src="https://github.com/okada1226/unseal/blob/main/unseal2.png?raw=true">
+       </div>
+       <div class="image3">
+       <img src="https://github.com/okada1226/unseal/blob/main/unseal3.png?raw=true">
        </div>
        <div class=sakuhin-text>
        <p class="title">Mandara</p>
