--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>MAYA OKADA</title>
 <link rel="stylesheet" href="https://nicyan-ict.github.io/ict/style.css"/>    
@@ -34,8 +36,13 @@
        <img src="https://github.com/okada1226/unseal/blob/main/unseal3.png?raw=true">
        </div>
        <div class=sakuhin-text>
-       <p class="title">Mandara</p>
-       <p class="detail">日常で見かける商品を用いて、曼荼羅を描いたグラフィックス。<br class="br-pc">近すぎて気づかない、混沌とした日本の日常風景を表現した。<br>2m× 2m / ターポリン / 2017.8</p>
+       <p class="title">unseal</p>
+       <p class="detail">
+         オリジナルのボードゲームがつくれるアプリ「unseal」の
+<br class="br-pc">アプリアイコンとティザーサイトの制作を担当。
+<br class="br-pc">Webサービスにおける誠実さのなかに
+<br class="br-pc">ゲームアプリらしい楽しさを取り入れたイメージを展開。
+<br>web design / 2019</p>
 
       </div>
 
