--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 
 
         <body>
-     <image>
        <div class="sakuhin1">
        <div class="image1">
        <img src="https://github.com/okada1226/unseal/blob/main/unseal1.png?raw=true">
@@ -63,7 +62,7 @@
       </div>
 
     <footer>
-    <div class=back><a href="https://okada1226.github.io/MAYA-OKADA-WORKS/">Back</a></div>
+        <div class=back><a href="https://okada1226.github.io/mayaokadaworks/">Back</a></div>
   </footer>
 
   </body>
